Bug 1147830 - crash in HMDInfoOculus::HMDInfoOculus() on Mac; r=nullcheck